--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Cities in Oregon</title>
+    <title>Resilience Story of New York in the Face of COVID-19</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--meta data for sharing links on Facebook-->
-    <meta property="og:title" content="The major cities in Oregon"/>
+    <meta property="og:title" content="Sleeping New York"/>
     <meta property="og:url" content="http://geoviz.ceoas.oregonstate.edu/storymap/examples/2.5/video.html"/>
-    <meta property="og:description" content="This is an example of a storymap."/>
+    <meta property="og:description" content="Resilience Storymap."/>
     <meta property="og:image" content="../../img/social.png"/>
 
     <!--add required stylesheets-->
@@ -53,16 +53,15 @@
 <div id="storymap" class="container-fluid">
     <div class="row">
         <div class="col-sm-6 col-md-4 storymap-story">
-            <section data-scene="overview" data-background="assets/portland.mp4">
+            <section data-scene="overview" data-background="assets/nyvintage.mp4">
                 <div class="fullscreen text-center">
 
-                    <h1 class="display-4 d-flex justify-content-center">Cities in Oregon</h1>
+                    <h1 class="display-4 d-flex justify-content-center">Sleeping New York</h1>
 
 
-                    <small class="d-flex justify-content-center" style="color: rgba(255,255,255,0.95)">This story map
-                        illustrates the major cities in
-                        Oregon using a storytelling structure.
-                    </small>
+                    <strong class="d-flex justify-content-center" style="color: rgba(255,255,255,0.95)">This is the resilience story of New York State
+                      in the face of COVID-19 pandemic
+                    </strong>
                 </div>
             </section>
             <section data-scene="portland">
