--- a/description.html
+++ b/description.html
@@ -1,41 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Mount Merapi</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href= "https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-  <link href="style.css" rel="stylesheet">
-  <script src= "https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src= "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <title>Resilience Story of New York</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!--meta data for sharing links on Facebook-->
+    <meta property="og:title" content="Resilience New York"/>
+    <meta property="og:url" content="http://geoviz.ceoas.oregonstate.edu/storymap/examples/2.5/video.html"/>
+    <meta property="og:description" content="Resilience Storymap."/>
+    <meta property="og:image" content="../../img/social.png"/>
+
+    <!--add required stylesheets-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <!--leaflet css-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.4.0/leaflet.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
+
+    <!--add favicon for the web page-->
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <!-- add a favicon of NY big apple from website https://favicon.io/favicon-converter/-->
+
+    <!--Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/1.3.4/chroma.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/storymap.2.5.css">
+
+    <!--add required libraries-->
+    <script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.4.0/leaflet.js"></script>
+    <!--jquery-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+
+    <!--boostrap-->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!--leaflet.ajax for asynchronously adding geojson data-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
+
+    <!--mini globle map-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.19/topojson.min.js"></script>
+    <script src="js/Control.GlobeMiniMap.js"></script>
+
+    <!--story map plugin-->
+    <script src="js/storymap.2.5.js"></script>
 
 </head>
-
 <body>
-<!-- Navigations,container, and button where the navigation is at the top of the page sticked
-to the below container and the container-fluid for automatic is used as adjustment of the container
-to the view dimension and <button type="uses toggle-->
-<nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
-<div class="container-fluid">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarResponsive">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="nav-link text-muted" href="#">Home</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="description.html">Description</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-muted" href="#">Contact</a>
-      </li>
-    </ul>
+
+<!--Navigations,container,and button -->
+<nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
+  <a class="navbar-brand" href="New-York.png">
+   <img src="img/New-York.png" alt="Logo" style="width:35px;">NYS</a>
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link text-muted" href="#">Home</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="description.html">Description</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-muted" href="#">Contact</a>
+        </li>
+      </ul>
+    </div>
   </div>
-</div>
 </nav>
 
 <!-- Welcome Sections, use container, give margins/paddings/boundaries; hr is horizontal style-->
@@ -56,7 +93,7 @@ to the view dimension and <button type="uses toggle-->
 <div class="row text-center padding">
   <div class="col-xs-12 col-sm-6 col-md-4">
     <i class="fas fa-mountain fa-3x"></i>
-    <h4>Environment</h4>
+    <h4>New York State</h4>
     <p>Merapi’s eruption in 2010 with rapid onset and large magnitude had displaced almost 400,000 people and posed great challenges in evacuation processes (Mei, et al., 2013, p. 2). Despite these impacts, most villagers returned to their settlements and developed various activities in areas situated only 5 kms from the volcano’s crater (Sagala, et al., 2012, p. 1; Davis, 2013).
     </p>
   </div>
@@ -72,6 +109,7 @@ to the view dimension and <button type="uses toggle-->
     </p>
   </div>
 </div>
+
 
 <hr>
 
