--- a/indexok.html
+++ b/indexok.html
@@ -154,9 +154,10 @@
             <section data-scene="end" data-background="img/NY_worktogether.jpg">
                 <div class="fullscreen text-center">
                     <h1 class="display-4 d-flex justify-content-center" style="background:black"></h1>
-                    <h4 class="d-flex justify-content-center" style="color: rgba(255,255,255,0.95)"><b>This storymap is possible to be developed due to the contributions of following institutons, organizations and individuals:
-                      New York State Government, U.S. Center of Disease Control and Prevention, Taylor DesOrmeau (mlive.com), Lazaro Gamio (New York Times), Orion Rummier and Rebecca Falconer (Axios), Robin Abcarian (Los Angeles Times),
-                      Julianne Malveaux (New Orleans Tribune), foodpantries.org, homelessshelterdirectory.org, the New Yorker, Professor Bo Zhao, and the University of Washington, Seattle.
+                    <h4 class="d-flex justify-content-center" style="color: rgba(255,255,255,0.95)"><b>The development of this storymap is possible due to the online and open sourced data contributions of
+                      New York State Government, U.S. Center of Disease Control and Prevention, Taylor DesOrmeau (mlive.com), Lazaro Gamio (New York Times), Orion Rummier and Rebecca Falconer (Axios),
+                      Robin Abcarian (Los Angeles Times),Julianne Malveaux (New Orleans Tribune), foodpantries.org, homelessshelterdirectory.org, the New Yorker, and guidance of Professor Bo Zhao in the
+                      University of Washington, Seattle.
                     </b></h4>
                 </div>
             </section>
