--- a/indexok.html
+++ b/indexok.html
@@ -154,7 +154,7 @@
             <section data-scene="end" data-background="img/NY_worktogether.jpg">
                 <div class="fullscreen text-center">
                     <h1 class="display-4 d-flex justify-content-center" style="background:black"></h1>
-                    <h4 class="d-flex justify-content-center" style="color: rgba(255,255,255,0.95)"><b>The development of this storymap is possible due to the online and open sourced data contributions of
+                    <h4 class="d-flex justify-content-center" style="color: rgba(255,255,255,0.95); background: black; Opacity: 0.7;"><b>The development of this storymap is possible due to the online and open sourced data contributions of
                       New York State Government, U.S. Center of Disease Control and Prevention, Taylor DesOrmeau (mlive.com), Lazaro Gamio (New York Times), Orion Rummier and Rebecca Falconer (Axios),
                       Robin Abcarian (Los Angeles Times),Julianne Malveaux (New Orleans Tribune), foodpantries.org, homelessshelterdirectory.org, the New Yorker, and guidance of Professor Bo Zhao in the
                       University of Washington, Seattle.
