--- a/indexnew.html
+++ b/indexnew.html
@@ -7,8 +7,8 @@
 
     <!--meta data for sharing links on Facebook-->
     <meta property="og:title" content="Resilience New York"/>
-    <meta property="og:url" content="http://geoviz.ceoas.oregonstate.edu/storymap/examples/2.5/video.html"/>
-    <meta property="og:description" content="Resilience Storymap."/>
+    <meta property="og:url" content="http://127.0.0.1:5500/index.html"/>
+    <meta property="og:description" content="This is the storymap of New York State in the face of pandemic COVID-19"/>
     <meta property="og:image" content="img/covid.jpeg"/>
 
     <!--add required stylesheets-->
@@ -664,7 +664,9 @@
             return map;
         }
     });
+
 </script>
+
 <div class="storymap-trigger" style="top: 30%;">
 </div>
 </body>
