--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--meta data for sharing links on Facebook-->
-    <meta property="og:title" content="Resilience New York"/>
-    <meta property="og:url" content="https://sites.google.com/uw.edu/nysstorymap/home"/>
+    <meta property="og:title" content="catharinadepari/storymap"/>
+    <meta property="og:url" content="	https://github.com/catharinadepari/storymap/blob/master/index.html"/>
     <meta property="og:description" content="This is the storymap of New York State in the face of pandemic COVID-19"/>
     <meta property="og:image" content="img/covid.jpeg"/>
 
@@ -57,6 +57,7 @@
       color: rgba(0, 255, 0, .6);
       text-shadow: 0 0 10px rgb(0, 255, 0);
     }
+
     </style>
 
     <!--add required libraries-->
@@ -272,7 +273,7 @@
     <dl>
         <dt>
             <!--facebook icon-->
-            <a class="fab fa-facebook-square btn" href="https://facebook.com/sharer.php?u=http://geoviz.ceoas.oregonstate.edu/storymap/examples/2.5/video.html" style="top:60px"
+            <a class="fab fa-facebook-square btn" href="https://facebook.com/sharer.php?u=https://github.com/catharinadepari/storymap/blob/master/index.html" style="top:60px"
                target="_blank"></a>
         </dt>
         <dt>
