--- a/index.html
+++ b/index.html
@@ -645,8 +645,7 @@
               marker: 'red',
               position: 'bottomright',
               topojsonSrc: 'js/world.json',
-              attribution: 'Chris Whong'// https://github.com/chriswhong/leaflet-globeminimap/blob/master/example/index.html
-            }).addTo(map);
+              attribution: 'Chris Whong'
 
             //add zoom control with your options
             L.control.zoom({
