--- a/index1.html
+++ b/index1.html
@@ -60,6 +60,7 @@
 
     </style>
 
+
     <!--add required libraries-->
     <script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.4.0/leaflet.js"></script>
@@ -239,8 +240,8 @@
           </div>
           <div class="leaflet-bottom leaflet-right">
             <div class="leaflet-control-attribution leaflet-control storymap-attribution">
-              <a href="">
-              <img src="" width="18px" target="_blank">
+              <a href="https://github.com/catharinadepari/storymap/blob/master/index.html">
+              <img src="https://github.com/catharinadepari/storymap/blob/master/img/New-York.png" width="18px" target="_blank"> storymap.js
             </a>
           </div>
         </div>
@@ -296,7 +297,7 @@
                     <h4 class="modal-title"><b>About</b></h4>
                 </div>
                 <div class="modal-body">
-                    <p>This webmap contains a resilience story of New York State with data that are collected mainly from <b>World Bank's database, The New York Times,
+                    <p>This webmap contains a resilience story of New York State with data collected mainly from <b>World Bank's database, The New York Times,
                       Los Angeles Times, and the official website of NY State government</b>. The objective is to promote understanding that the resilience capacity of a community is <b>not primarily
                       dependent only upon the efforts made by their leaders but by the initiatives and solidarity among the members</b>. The resilience story of New York State is brought up as it
                       provides a lesson learn of how poverty, security, and trust interplay, complicate, and dictate the community's future in the face of pandemic.
@@ -332,23 +333,23 @@
         color: 'black'
       };
     }
-    //set cases_legend
-    // var cases_legend = L.control({position: 'topleft'});
-    // cases_legend.onAdd = function (map) {
-    //   var div = L.DomUtil.create('div', 'cases_legend'),
-    //   grades = [],
-    //   labels = [],
-    //   from, to;
-    //   for (var i = 0; i < grades.length; i++) {
-    //     from = grades[i];
-    //     to = grades[i + 1];
-    //     labels.push(
-    //       '<i style="background:' + getColor(from + 1) + '"></i> ' +
-    //       from + (to ? '&ndash;' + to : '+'));
-    //     }
-    //     div.innerHTML = labels.join('<br>');
-    //     return div;
-    //   };
+    // set cases_legend
+    var cases_legend = L.control({position: 'topleft'});
+    cases_legend.onAdd = function (map) {
+      var div = L.DomUtil.create('div', 'cases_legend'),
+      grades = [],
+      labels = [],
+      from, to;
+      for (var i = 0; i < grades.length; i++) {
+        from = grades[i];
+        to = grades[i + 1];
+        labels.push(
+          '<i style="background:' + getColor(from + 1) + '"></i> ' +
+          from + (to ? '&ndash;' + to : '+'));
+        }
+        div.innerHTML = labels.join('<br>');
+        return div;
+      };
       var cases_legend = '<i style="background-color:#e6475f; opacity: 0.7"></i><p><b>300k+</b></p>' +
         '<i style="background-color:#ec785a; opacity: 0.7"></i><p><b>150k-300k</b></p>'+
         '<i style="background-color:#eaa368; opacity: 0.7"></i><p><b>50k-150k</b></p>'+
@@ -374,22 +375,22 @@
       };
     }
     // Set out_legend
-    // var out_legend = L.control({position: 'topleft'});
-    // out_legend.onAdd = function (map) {
-    //   var div = L.DomUtil.create('div', 'out_legend'),
-    //   gradesout = [],
-    //   labelsout = [],
-    //   from, to;
-    //   for (var i = 0; i < gradesout.length; i++) {
-    //     from = grades[i];
-    //     to = grades[i + 1];
-    //     labelsout.push(
-    //       '<i style="background:' + getColor(from + 1) + '"></i> ' +
-    //       from + (to ? '&ndash;' + to : '+'));
-    //     }
-    //     div.innerHTML = labelsout.join('<br>');
-    //     return div;
-    //   };
+    var out_legend = L.control({position: 'topleft'});
+    out_legend.onAdd = function (map) {
+      var div = L.DomUtil.create('div', 'out_legend'),
+      gradesout = [],
+      labelsout = [],
+      from, to;
+      for (var i = 0; i < gradesout.length; i++) {
+        from = grades[i];
+        to = grades[i + 1];
+        labelsout.push(
+          '<i style="background:' + getColor(from + 1) + '"></i> ' +
+          from + (to ? '&ndash;' + to : '+'));
+        }
+        div.innerHTML = labelsout.join('<br>');
+        return div;
+      };
       var out_legend = '<i style="background-color:#da5da4; opacity: 0.7"></i><p><b>400k+</b></p>' +
         '<i style="background-color:#f17c8e; opacity: 0.7"></i><p><b>200k-400k</b></p>'+
         '<i style="background-color:#f1a38a; opacity: 0.7"></i><p><b>50k-200k</b></p>'+
@@ -415,22 +416,22 @@
       };
     }
     // Set pov_legend
-    // var pov_legend = L.control({position: 'topleft'});
-    // pov_legend.onAdd = function (map) {
-    //   var div = L.DomUtil.create('div', 'pov_legend'),
-    //   gradespov = [],
-    //   labelspov = [],
-    //   from, to;
-    //   for (var i = 0; i < gradespov.length; i++) {
-    //     from = grades[i];
-    //     to = grades[i + 1];
-    //     labelspov.push(
-    //       '<i style="background:' + getColor(from + 1) + '"></i> ' +
-    //       from + (to ? '&ndash;' + to : '+'));
-    //     }
-    //     div.innerHTML = labelspov.join('<br>');
-    //     return div;
-    //   };
+    var pov_legend = L.control({position: 'topleft'});
+    pov_legend.onAdd = function (map) {
+      var div = L.DomUtil.create('div', 'pov_legend'),
+      gradespov = [],
+      labelspov = [],
+      from, to;
+      for (var i = 0; i < gradespov.length; i++) {
+        from = grades[i];
+        to = grades[i + 1];
+        labelspov.push(
+          '<i style="background:' + getColor(from + 1) + '"></i> ' +
+          from + (to ? '&ndash;' + to : '+'));
+        }
+        div.innerHTML = labelspov.join('<br>');
+        return div;
+      };
       var pov_legend = '<i style="background-color:#83205c; opacity: 0.6"></i><p><b>400k+</b></p>' +
         '<i style="background-color:#d72046	; opacity: 0.6"></i><p><b>200k-400k</b></p>'+
         '<i style="background-color:#db8445; opacity: 0.6"></i><p><b>50k-200k</b></p>'+
@@ -450,24 +451,25 @@
 
       // create legend for icons
       // Set pov_legend
-      // var volunteer_legend = L.control({position: 'topleft'});
-      // volunteer_legend.onAdd = function (map) {
-      //   var div = L.DomUtil.create('div', 'volunteer_legend'),
-      //   gradespov = [],
-      //   labelspov = [],
-      //   from, to;
-      //   for (var i = 0; i < gradespov.length; i++) {
-      //     from = grades[i];
-      //     to = grades[i + 1];
-      //     labelsvolunteer.push(
-      //       '<i style="background:' + getColor(from + 1) + '"></i> ' +
-      //       from + (to ? '&ndash;' + to : '+'));
-      //     }
-      //     div.innerHTML = labelsvolunteer.join('<br>');
-      //     return div;
-      //   };
-      //   var volunteer_legend = '<i class="fas fa-map-pin" style="font-size:25px;color: #a2c036">foodbank</i>' +
-      //     '<i class="far fa-flag" style="font-size:25px;color: #a2c036">shelter</i>';
+      var volunteer_legend = L.control({position: 'topleft'});
+      volunteer_legend.onAdd = function (map) {
+        var div = L.DomUtil.create('div', 'volunteer_legend'),
+        gradespov = [],
+        labelspov = [],
+        from, to;
+        for (var i = 0; i < gradespov.length; i++) {
+          from = grades[i];
+          to = grades[i + 1];
+          labelsvolunteer.push(
+            '<i style="background:' + getColor(from + 1) + '"></i> ' +
+            from + (to ? '&ndash;' + to : '+'));
+          }
+          div.innerHTML = labelsvolunteer.join('<br>');
+          return div;
+        };
+        var volunteer_legend = '<i class="fas fa-map-pin" style="font-size:25px;color: #a2c036">foodbank</i>' +
+          '<i class="far fa-flag" style="font-size:25px;color: #a2c036">shelter</i>';
+
       // var vol_legend = '<i class="fas fa-map-pin" style="font-size:25px;color: #a2c036">NYS_foodbank</i>';
       // var shelter_legend = '<i class="far fa-flag" style="font-size:25px;color: #a2c036">shelter</i>';
       var tweet_legend = '<i class=""><svg height="16" width="16"><circle cx="8" cy="8" r="6" stroke="white" stroke-width="0" fill="#00ff00" fillOpacity="0.4" /></svg></i><p><b>Tweets</b></p>';
@@ -616,6 +618,7 @@
               gestureHandling: 'cooperative'
             }).setView([40.80312772327861, -74.25052800770425], 2.5);
 
+
             // animated zoom
               map.on('click',
               function(e){
@@ -645,7 +648,7 @@
               marker: 'red',
               position: 'bottomright',
               topojsonSrc: 'js/world.json',
-              attribution: 'Chris Whong'
+              attribution: 'Chris Whong'// https://github.com/chriswhong/leaflet-globeminimap/blob/master/example/index.html
             }).addTo(map);
 
             //add zoom control with your options
