--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
     var scenes = {
         overview: {lat:37.6, lng: -95.665, zoom: 7, name: 'overview', layers: []},
         cases: {lat:37.6, lng: -95.665, zoom: 3.8, name: 'cases', layers: [layers.cases]}, //cases of covid, scale: US
-        order: {lat:37.6, lng: -95.665, zoom: 3.8, name: 'order', layers: [layers.cases, layers.order]}, //tweets scale: NYS
+        order: {lat:37.6, lng: -95.665, zoom: 3.8, name: 'order', layers: [layers.order]}, //tweets scale: NYS
         outrage: {lat:43.00035, lng: -75.4999, zoom: 6.5, name: 'outrage', layers: [layers.outrage]}, // protests, USA
         poverty: {lat:43.00035, lng: -75.4999, zoom: 6.5, name: 'poverty', layers: [layers.poverty]}, // income level, scale : NYS
         volunteer: {lat:43.00035, lng: -75.4999, zoom: 6.5, name: 'volunteer', layers: [layers.volunteer, layers.shelter, layers.poverty]}, // food, scale: Bronx, NYC
