--- a/index.html
+++ b/index.html
@@ -59,6 +59,28 @@
       text-shadow: 0 0 10px rgb(0, 255, 0);
     }
 
+    /* for animated Credits with marquee */
+    .main {
+      text-align:center;
+      font-family: "Times New Roman";
+      position: absolute;
+      left: 50px;
+      right: 50px;
+      /* background-color: black; */
+      color: orange;
+      /* border: solid; */
+    }
+    .marq {
+      padding-top: 100px;
+      padding-bottom: 100px;
+    }
+    .geek1 {
+      font-size: 12px;
+      font-weight: bold;
+      color: white;
+      text-align: center;
+    }
+
     </style>
 
     <!--add required libraries-->
@@ -145,7 +167,7 @@
               <img src="img/tweet2.png" width="100%" height="100%" class="img-responsive img-thumbnail" alt="responsive image" alt-text="tweets">
             </section>
 
-            <section data-scene="outrage" class="visible viewing" style="background-color:#535252; color:white">
+            <section data-scene="outrage" class="visible viewing" style="background-color:#535252; color:white;">
                 <h2><b>Public Outrage</b></h2>
                 <p>The protest continues <strong>from social media to public streets</strong>. People flocked to streets, criticizing the governor's pause order and lockdow as they will
                 create more economic problem and unemployment</p>
@@ -159,7 +181,7 @@
                 <br>
             </section>
 
-            <section data-scene="poverty" class="visible viewing" style="background-color:#535252; color:white">
+            <section data-scene="poverty" class="visible viewing" style="background-color:#535252; color:white;">
                 <h2><b>Violence and Poverty</b></h2>
                 <p>Being one of the wealthiest states in the USA does not necessarily mean that this state is free from homelessness and poverty.
                   NY States has the greatest income divide in the U.S. <strong>with ratio between the wealthiest and the middle income residents is 1 percent to 99 percent. </strong>
@@ -169,7 +191,7 @@
                 <p style="text-align:center;"><a href="https://theneworleanstribune.com/what-others-are-saying-homelessness-crisis-we-are-better-than-this/">Countesy of Julianne Malveaux</a></p>
             </section>
 
-            <section data-scene="volunteer" class="visible viewing" style="background-color:#535252; color:white">
+            <section data-scene="volunteer" class="visible viewing" style="background-color:#535252; color:white;">
                 <h2><b>Heroism</b></h2>
                 <p>In this difficult time, <strong>heroism</strong> act increases. The map shows some of <strong>150 food pantries</strong> that voluntarily provided
                   free food in cities with highest economic gap, poverty, and violence firearm rate. These pantries are <strong>organized by church and social institutions</strong>,
@@ -184,16 +206,49 @@
             </section>
 
             <section data-scene="end" data-background="img/NY_worktogether.jpg">
-                <div class="fullscreen text-center">
-                    <h1 class="display-4 d-flex justify-content-center" style="background:black"></h1>
-                    <h4 class="d-flex justify-content-center" style="color: rgba(255,255,255,0.95); background: black; Opacity: 0.7;"><b>The development of this storymap is possible due to the online and open sourced data contributions of
-                      New York State Government, U.S. Center of Disease Control and Prevention, Taylor DesOrmeau (mlive.com), Lazaro Gamio (New York Times), Orion Rummier and Rebecca Falconer (Axios),
-                      Robin Abcarian (Los Angeles Times),Julianne Malveaux (New Orleans Tribune), foodpantries.org, homelessshelterdirectory.org, the New Yorker, and guidance of Professor Bo Zhao in the
-                      University of Washington, Seattle.
-                    </b></h4>
+                <div class="fullscreen">
                 </div>
             </section>
-        </div>
+
+            <section data-scene="credits" data-background="img/background_end.png">
+                <div class="fullscreen">
+                  <div class="main">
+                    <marquee class="marq" bgcolor="" direction="up" loop="" height="500px" width= "1000px" hspace="100px" vspace="200px" truespeed="10">
+                      <h4 style="font-size: 36px; color: orange;">Acknowledgement
+                        <ul style="font-size: 24px; color: lightyellow;">This storymap is possible to be developed due to the contributions of following institutons, organizations, and individuals:
+                          <li>New York State Government</li>
+                          <li>U.S. Center of Disease Control and Prevention</li>
+                          <li>Foodpantries.org in City of Bronx</li>
+                          <li>Homelessshelterdirectory.org in City of Bronx</li>
+                          <li>University of Washington</li>
+                          <li>Professor Bo Zhao, University of Washington, Seattle</li>
+                        </ul>
+                      </h4>
+                      <h4 style="font-size: 36px; color: orange;">References
+                        <ul style="font-size: 24px; color: lightyellow;">
+                          <li>Chris Whong, https://github.com/chriswhong/leaflet-globeminimap/blob/master/example/index.html</li>
+                          <li>Geeks for Geeks, https://www.geeksforgeeks.org/html-marquee-tag/</li>
+                          <li>Holling, C.S., (1973), <i>"Resilience and Stability of Ecological System"</i></li>
+                          <li>Jacob Bo Zhao, https://jakobzhao.github.io/storymap/assets/color.html</li>
+                          <li>Jacob Bo Zhao, https://jakobzhao.github.io/storymap/examples/2.5/styles.html</li>
+                          <li>Julianne Malveaux, (2020), <i>"What Others Are Saying Homelesness Crisis: We are Better than This"</i>, New Orleans Tribune</li>
+                          <li>Lazaro Gamio, (2020), <i>"State By State: Comparing Coronavirus Death Rates Across U.S.",</i> New York Times</li>
+                          <li>Leaflet, https://leafletjs.com/plugins.html</li>
+                          <li>Orion Rummier and Rebecca Falconer, (2020), <i>"In photos: Groups protest coronavirus lockdowns across the U.S."</i></li>
+                          <li>Robin Abcarian, (2020), <i>"Column: Gun-toting Republicans ignoring quarantine orders? Yes, even coronavirus has become part of the culture wars" </i>, Los Angeles Times</li>
+                          <li>Song, Z., (2017), <i>"Map-Based Visual Storytelling: An Assessment of Emerging Genres and Tropes", University of Wisconsin-Madison"</i></li>
+                          <li>Taylor DesOrmeau, (2020), <i>"What’s the difference between Michigan’s stay-at-home order and state of emergency?"</i></li>
+                          <li>TeachMideast, (2020), <i>"TeachMideast" </i>, Middle East</li>
+                          <li>TheNewYorker, (2020), <i>"The Streets of New York City Under Quarantine"</i></li>
+                          <li>Menny, (2016), https://mennyfox55.tumblr.com/post/152449515953/dormir</li>
+                        </ul>
+                      </h4>
+                    </marquee>
+                  </div>
+                </div>
+              </section>
+
+          </div>
 
         <!--map div-->
         <div class="col-sm-6 col-md-8 storymap-map leaflet-container leaflet-touch leaflet-retina leaflet-fade-anim" tabindex="0" style="outline: 2px dashed blue;">
@@ -582,7 +637,8 @@
         outrage: {lat:43.00035, lng: -75.4999, zoom: 6.5, name: 'outrage', layers: [layers.outrage]}, // protests, USA
         poverty: {lat:43.00035, lng: -75.4999, zoom: 6.5, name: 'poverty', layers: [layers.poverty]}, // income level, scale : NYS
         volunteer: {lat:43.00035, lng: -75.4999, zoom: 6.5, name: 'volunteer', layers: [layers.volunteer, layers.shelter, layers.poverty]}, // food, scale: Bronx, NYC
-        end: {lat:40.8448, lng: -73.8648, zoom: 4, name: 'end'}
+        end: {lat:40.8448, lng: -73.8648, zoom: 4, name: 'end'},
+        credits: {lat:40.8448, lng: -73.8648, zoom: 4, name: 'credits'}
     };
 
     $('#storymap').storymap({
@@ -627,7 +683,7 @@
 
               map.flyTo([40.8448, -73.8648], 12, {
                 animate: true,
-                duration: 2 //
+                duration: 2 //in seconds
               });
             });
 
