--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   <div class="row">
     <div class="col-sm-6 col-md-4 storymap-story" style="top: 18px;">
 
-      <section data-scene="overview" data-background="img/nyvintage.mp4">
+      <section data-scene="overview" data-background="img/nysvideo.mp4">
                 <div class="fullscreen text-center">
                     <h1 class="display-4 d-flex justify-content-center">Resilience Story of New York</h1>
                     <strong class="d-flex justify-content-center" style="color: rgba(255,255,255,0.95); font-size:20px;">This story is a reflection on the struggles of New York State
